# Virtual-IED

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  main.cpp
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt
src/api/include/: api.hpp
src/api/src/: api.cpp
src/files/: ied_config.json  ied_config_full.json
src/goose/: CMakeLists.txt
src/goose/include/: goose.hpp  goose_pkt.hpp
src/goose/src/: goose.cpp
src/logic/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/main/include/: main.hpp
src/main/src/: main.cpp
src/protection/: CMakeLists.txt
src/protection/include/: pdir.hpp  pdis.hpp  pioc.hpp  prot.hpp  ptoc.hpp  ptov.hpp  ptuv.hpp  trip_time_opt.hpp
src/protection/src/: pdir.cpp  pdis.cpp  pioc.cpp  pioc_neutral.cpp  pioc_phase.cpp  ptoc.cpp  ptoc_neutral.cpp  ptoc_phase.cpp  ptov.cpp  ptuv.cpp  trip_time_opt.cpp
src/sniffer/: CMakeLists.txt
src/sniffer/include/: sniffer.hpp
src/sniffer/src/: sniffer.cpp
src/tools/include/: general_definition.hpp  raw_socket.hpp
